--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "devDependencies": {
     "sass": "^1.75.0",
+    "sharp": "^0.33.4",
     "svgo": "^3.2.0",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-image-optimizer": "^1.1.8"
   },
   "dependencies": {
-    "normalize.css": "^8.0.1",
-    "vite-plugin-image-optimizer": "^1.1.7"
+    "normalize.css": "^8.0.1"
   }
 }
